<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_vertical"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:gravity="center_horizontal"
		android:text="@string/finishedTitle"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textStyle="bold" />

	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/finished_message1"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/textFinishedScore"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="10/10"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/finished_message2"
			android:textAppearance="?android:attr/textAppearanceMedium" />

	</LinearLayout>

	<Button
		android:id="@+id/buttonFinished"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="20dp"
		android:text="@string/finished_button_continue" />

</LinearLayout>