<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/QuizLayout"
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:baselineAligned="false"
	android:orientation="horizontal" >

	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:gravity="fill_horizontal"
		android:orientation="vertical" android:layout_weight="8">

		<FrameLayout
			android:id="@+id/frameMap"
			android:layout_width="wrap_content"
			android:layout_gravity="center_horizontal" android:layout_weight="2" android:layout_height="0dp">

			<ImageView
				android:id="@+id/imageMap"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:contentDescription="Map"
				android:scaleType="fitStart"
				android:src="@drawable/map_ch_lakes" android:adjustViewBounds="true"/>

			<ImageView
				android:id="@+id/imageMapMarker"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="0dp"
				android:contentDescription="Map Marker"
				android:src="@drawable/location_marker_2"/>
		</FrameLayout>

		<TableRow
			android:id="@+id/tableRowAnswers1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:baselineAligned="false"
			android:gravity="center|center_horizontal" >

			<Button
				android:id="@+id/buttonAnswerA"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:text="Answer A" android:layout_weight="1"/>

			<Button
				android:id="@+id/buttonAnswerB"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:text="Answer B" />

		</TableRow>

		<TableRow
			android:id="@+id/tableRowAnswers2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:baselineAligned="false"
			android:gravity="center" >

			<Button
				android:id="@+id/buttonAnswerC"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:text="Answer C" />

			<Button
				android:id="@+id/buttonAnswerD"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_weight="1"
				android:text="Answer D" />

		</TableRow>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/LinearLayout1"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="2"
		android:gravity="fill_horizontal|right"
		android:orientation="vertical"
		android:paddingLeft="10dp"
		android:paddingRight="10dp" >

		<TableRow
			android:id="@+id/tableRowProgress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/progress"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/textProgress"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold" android:text="(-/-)"/>

		</TableRow>

		<ProgressBar
			android:id="@+id/progressBar"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<TableRow
			android:id="@+id/tableRowCorrect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/labelAnswerCorrect"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelCorrect"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/textCountCorrect"
				android:layout_width="match_parent"
				android:gravity="right"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold" android:text="0"/>
		</TableRow>

		<TableRow
			android:id="@+id/tableRowWrong"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/labelAnswerWrong"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelWrong"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/textCountWrong"
				android:layout_width="match_parent"
				android:gravity="right"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold" android:text="0"/>
		</TableRow>

		<FrameLayout
			android:id="@+id/frameSolutionIcons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<ImageView
				android:id="@+id/imageWrong"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:src="@drawable/wrong" />

			<ImageView
				android:id="@+id/imageCorrect"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp"
				android:layout_marginTop="20dp"
				android:src="@drawable/correct" />

		</FrameLayout>

		<LinearLayout
			android:id="@+id/layoutSolution"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/labelSolution"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelSolution"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/textSolution"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="-"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>